--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,15 @@
         "sourceMap": true,
         "typeRoots": [
             "node_modules/@types"
-        ]
+        ],
+        "strict": true,
+        "noImplicitAny": true,
+        "esModuleInterop": true
     },
     "exclude": [
         "node_modules",
-        "test"
+        "test",
+        "vite.config.ts",
+        "vitest.config.ts"
     ]
 }
