--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "declaration": true,
         "sourceMap": true,
+        "lib": ["ES2015"],
         "typeRoots": [
             "node_modules/@types"
         ],
