--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,22 @@
     "compilerOptions": {
         "declaration": true,
         "sourceMap": true,
-        "lib": ["ES2015"],
+        "lib": [
+            "ES2015"
+        ],
         "typeRoots": [
             "node_modules/@types"
         ],
         "strict": true,
         "noImplicitAny": true,
-        "esModuleInterop": true
+        "esModuleInterop": true,
+        "module": "NodeNext",
+        "moduleResolution": "NodeNext"
     },
     "exclude": [
         "node_modules",
         "test",
-        "vite.config.ts",
+        "vite.config.mts",
         "vitest.config.ts"
     ]
 }
